minor updates of libs and deprecating code